tests/ui/mismatched_types/trait-bounds-cant-coerce.stderr
error[E0308]: mismatched types
  --> $DIR/trait-bounds-cant-coerce.rs:13:7
   |
LL |     a(x);
   |     - ^ expected trait `Foo + Send`, found trait `Foo`
   |     |
   |     arguments to this function are incorrect
   |
   = note: expected struct `Box<(dyn Foo + Send + 'static)>`
              found struct `Box<(dyn Foo + 'static)>`
note: function defined here
  --> $DIR/trait-bounds-cant-coerce.rs:5:4
   |
LL | fn a(_x: Box<dyn Foo + Send>) {
   |    ^ -----------------------

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
